# RayTracer

./: CMakeLists.txt  README.md  README.txt
cameras/: Pinhole.cpp  Pinhole.h  ThinLens.cpp  ThinLens.h
core/: Camera.cpp  Camera.h  LightSource.cpp  LightSource.h  Material.cpp  Material.h  RayHitStructs.h  RayTracer.cpp  RayTracer.h  Scene.cpp  Scene.h  Shape.cpp  Shape.h
examples/: example.json  jsonExample.cpp  vecMatrixExample.cpp
lights/: AreaLight.cpp  AreaLight.h  PointLight.cpp  PointLight.h
main/: main.cpp
materials/: BlinnPhong.cpp  BlinnPhong.h
math/: geometry.h
parsers/: PPMWriter.h
shapes/: BVH.cpp  BVH.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h  TriMesh.cpp  TriMesh.h  Triangle.cpp  Triangle.h
